--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,5 @@
 <main class="container">
   <app-header></app-header>
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-  <img class="landing" src="../assets/logo.png">
-  <h2>Here are some links to help you start: </h2>
-  <ul>
-    <li>
-      <h2><a target="_blank" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
-    </li>
-    <li>
-      <h2><a target="_blank" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
-    </li>
-    <li>
-      <h2><a target="_blank" href="https://blog.angular.io//">Angular blog</a></h2>
-    </li>
-  </ul>
+  <router-outlet></router-outlet>
 </main>
-  <app-footer></app-footer>
+<app-footer></app-footer>
