--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -7,11 +7,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-      <a class="navbar-brand" routerLink="/customers">
+      <a class="navbar-brand" routerLink="/home">
                 <img class="logo" src="assets/logo.png" alt="logo" />
                 <span class="app-title">My Learning</span>
             </a>
       <span class="navbar-collapse" [attr.data-collapse]="isCollapsed">
+        <ul class="nav navbar-nav nav-pills navBarPadding">
+                    <li routerLinkActive="active"><a routerLink="/pnf">Test</a></li>
+                </ul>
                 <ul class="nav navbar-nav nav-pills navBarPadding">
                     <li routerLinkActive="active"><a routerLink="/about">About</a></li>
                 </ul>
